--- a/Final Challenge/style.scss
+++ b/Final Challenge/style.scss
@@ -22,6 +22,11 @@ header {
   a {
     text-decoration: none;
     color: white;
+    padding: 0 0.5em;
+
+    &:hover{
+      opacity: .75;
+    }
   }
 
   li {
@@ -29,43 +34,67 @@ header {
     font-family: "oswald";
     font-size: 18px;
     color: white;
+    margin-bottom: 10px;
+
+   
   }
 
-  ul {
-    // display: inline-block;
-    margin: 0 auto;
-  }
+  
+
 
   .registerCTA {
     border: 3px solid $primaryColor;
     display: inline-block;
     background-color: $primaryColor;
     border-radius: 100em;
-    padding: 0 0.5em;
+    padding: 0 0.2em;
+    
   }
 
   .icon {
-    background: black;
-    display: block;
+    
     position: absolute;
     right: 0;
     top: 0;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-right: 10px;
+  }
     
+  #myLinks{
+  display: none;
+}
+
 
   nav {
     overflow: hidden;
     position: relative;
-    padding: 1em 0;
-  }
+    padding: .5em 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  #myLinks {
-    display: none;
-  }
+    li+li{
+      margin-top: .5em;
+    }
 
-  & :hover {
-    opacity: 0.75;
+    .navLeft {
+      width: 30%;
+      align-self: center;
+    }
+
+    ul{
+    width:70%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    }
+
+
+    img{
+      margin-left: 30px
+    };
+    
+
   }
-  }
+}
